--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
     "SHELL": "/bin/sh"
   },
   "overrideCommand": false,
-  "postCreateCommand": "npm install -g pnpm && pnpm install && pnpm dev -- --host",
+  "postCreateCommand": "npm install -g pnpm && pnpm install",
   "forwardPorts": [4321],
   "customizations": {
     "vscode": {
